--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 <h1 id="next-3x">.NEXT 3.x</h1>
 
 <p>.NEXT (dotNext) is the family of powerful libaries aimed to improve development productivity and extend .NET API with unique features which potentially will be implemented in the next versions of C# compiler or .NET Runtime.</p>
-<div class="NOTE">
-<h5>Note</h5>
-<p>Use menu <em>Old Versions</em> in the navigation bar to choose documentation for previous versions of .NEXT. Migration guides are <a href="migration/index.html">here</a>.</p>
+<div class="IMPORTANT">
+<h5>Important</h5>
+<p>The repo has been transferred to .NET Foundation. This documentation is no longer maintained. Up-to-date version of documentation is located <a href="https://dotnet.github.io/dotNext">here</a>. The sources are <a href="https://github.com/dotnet/dotNext">here</a>.</p>
 </div>
 <p>This chapter gives quick overview of these libraries. Read <a href="features/core/index.html">articles</a> for closer look at all available features.</p>
 <p>Prerequisites:</p>
